import 'package:caregarden_cmd/utils/tipo_planta.dart';

class Planta {
  final int? id;
  final String nome;
  final DateTime dataDeAquisicao;
  final TipoPlanta? tipoPlanta;

  Planta({
    this.id,
    required this.nome,
    required this.dataDeAquisicao,
    this.tipoPlanta,
  });

  Planta.fromJson(Map<String, dynamic> json)
      : id = json['id'],
        nome = json['nome'],
        dataDeAquisicao = DateTime.parse(json['dataDeAquisicao']),
        tipoPlanta = TipoPlanta.values.byName(json['tipoPlanta']);

  Map<String, dynamic> toJson() {
    return {
      'id': id,
      'nome': nome,
      'dataDeAquisicao': dataDeAquisicao.toIso8601String(),
      'tipoPlanta': tipoPlanta!.tipo
    };
  }
}
